--- a/partner_product_attribute_value/views/product_attribute_value_views.xml
+++ b/partner_product_attribute_value/views/product_attribute_value_views.xml
@@ -11,7 +11,7 @@
         <field name="filter" eval="False"/>
         <field name="limit">80</field>
         <field name="res_model">product.attribute.value</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">list,form</field>
         <field name="search_view_id" eval="False"/>
         <field name="target">current</field>
     </record>
@@ -26,12 +26,12 @@
         <field name="web_icon" eval="False"/>
     </record>
 
-    <!-- CUSTOM TREE VIEW (default form not required): -->
+    <!-- CUSTOM list VIEW (default form not required): -->
     <record id="partner_product_attribute_value_inh_tree" model="ir.ui.view">
         <field name="name">partner.attribute.inh.tree</field>
         <field name="model">product.attribute.value</field>
         <field name="inherit_id" ref="product.product_attribute_value_list"/>
-        <field name="type">tree</field>
+        <field name="type">list</field>
         <field name="arch" type="xml">
             <field name="name" position="after">
                 <field name="partner_id"/>
