--- a/partner_product_attribute_value/views/res_partner_views.xml
+++ b/partner_product_attribute_value/views/res_partner_views.xml
@@ -13,7 +13,7 @@
         <field name="res_model">product.attribute.value</field>
         <field name="target">current</field>
         <field name="type">ir.actions.act_window</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">list,form</field>
     </record>
 
     <record id="partner_product_attribute_values_inh_form" model="ir.ui.view">
