--- a/product_attribute_value_group/views/product_attribute_views.xml
+++ b/product_attribute_value_group/views/product_attribute_views.xml
@@ -7,7 +7,7 @@
         <field name="type">form</field>
         <field name="inherit_id" ref="product.product_attribute_view_form"/>
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='value_ids']/tree" position="inside">
+            <xpath expr="//field[@name='value_ids']/list" position="inside">
                 <field name="group_id" optional="show" context="{'default_attribute_id':attribute_id}"/>
                 <field name="attribute_id" column_invisible="1"/>
             </xpath>
