--- a/product_brand/views/product_brand_view.xml
+++ b/product_brand/views/product_brand_view.xml
@@ -147,7 +147,7 @@
         <field name="model">product.template</field>
         <field name="inherit_id" ref="product.product_template_kanban_view" />
         <field name="arch" type="xml">
-            <xpath expr="//strong[hasclass('o_kanban_record_title')]" position="after">
+            <xpath expr="//div[hasclass('mb-1')]" position="inside">
                 <div>
                     <a
                         t-if="record.product_brand_id"
@@ -166,7 +166,7 @@
         <field name="inherit_id" ref="product.product_kanban_view" />
         <field name="arch" type="xml">
             <xpath
-                expr="//div[hasclass('oe_kanban_details')]//strong[1]"
+                expr="//kanban/templates/t/main/div"
                 position="after"
             >
                 <div>
