--- a/sale_order_line_date/views/sale_order_view.xml
+++ b/sale_order_line_date/views/sale_order_view.xml
@@ -17,7 +17,7 @@
                 <field name="commitment_date" />
             </xpath>
             <xpath
-                expr="//field[@name='order_line']/tree/field[@name='price_unit']"
+                expr="//field[@name='order_line']/list/field[@name='price_unit']"
                 position="after"
             >
                 <field name="commitment_date" optional="show" />
