--- a/sale_order_line_menu/views/sale_order_line_views.xml
+++ b/sale_order_line_menu/views/sale_order_line_views.xml
@@ -35,7 +35,7 @@
                 />
                 <field name="price_total" optional="hide" sum="Price Total" />
             </xpath>
-            <xpath expr="//tree" position="inside">
+            <xpath expr="//list" position="inside">
                 <field name="date_order" widget="date" optional="show" />
             </xpath>
             <xpath expr="//field[@name='salesman_id']" position="attributes">
@@ -56,7 +56,7 @@
             <xpath expr="//field[@name='name']" position="attributes">
                 <attribute name="optional">show</attribute>
             </xpath>
-            <xpath expr="//tree" position="inside">
+            <xpath expr="//list" position="inside">
                 <field
                     name="invoice_lines"
                     widget="many2many_tags"
@@ -164,7 +164,7 @@
         <field name="name">Order Lines</field>
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">sale.order.line</field>
-        <field name="view_mode">tree,form,pivot</field>
+        <field name="view_mode">list,form,pivot</field>
         <field
             name="search_view_id"
             ref="sale_order_line_menu.sale_order_line_search"
