--- a/shoes_dealer/views/account_move_views.xml
+++ b/shoes_dealer/views/account_move_views.xml
@@ -11,7 +11,7 @@
         <field name="model">account.move</field>
         <field name="active" eval="True"/>
         <field name="priority">99</field>
-        <field name="type">tree</field>
+        <field name="type">list</field>
     </record>
 
     <record id="invoice_shoes_dealer_inh_form" model="ir.ui.view">
@@ -20,7 +20,7 @@
         <field name="type">form</field>
         <field name="inherit_id" ref="account.view_move_form"/>
         <field name="arch" type="xml">
-            <xpath expr="//page/field[@name='invoice_line_ids']/tree/field[@name='price_unit']" position="after">
+            <xpath expr="//page/field[@name='invoice_line_ids']/list/field[@name='price_unit']" position="after">
                 <field name="pairs_count" optional="show"/>
                 <field name="pair_price" optional="show"/>
             </xpath>
