--- a/shoes_dealer/views/assortment_pair_views.xml
+++ b/shoes_dealer/views/assortment_pair_views.xml
@@ -15,7 +15,7 @@
         <field name="search_view_id" eval="False"/>
         <field name="target">current</field>
         <field name="type">ir.actions.act_window</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">list,form</field>
     </record>
 
     <!-- CONFIG MENU: -->
@@ -65,12 +65,12 @@
         <field name="type">form</field>
     </record>
 
-    <!-- TREE VIEW: -->
+    <!-- list VIEW: -->
     <record id="product_material_default_tree" model="ir.ui.view">
-        <field name="name">assortment.pair.default.tree</field>
+        <field name="name">assortment.pair.default.list</field>
         <field name="model">assortment.pair</field>
         <field name="arch" type="xml">
-            <tree>
+            <list>
                 <field name="name"/>
                 <field name="product_id"/>
                 <field name="product_tmpl_id" optional="hide"/>
@@ -80,14 +80,14 @@
                 <field name="partner_id"/>
                 <field name="sm_id" optional="hide"/>
                 <field name="sml_id" optional="hide"/>
-            </tree>
+            </list>
         </field>
         <field name="groups_id" eval="[(6, 0, [])]"/>
         <field name="inherit_id" eval="False"/>
         <field name="key" eval="False"/>
         <field name="mode">primary</field>
         <field name="priority">16</field>
-        <field name="type">tree</field>
+        <field name="type">list</field>
     </record>
 
 </odoo>
