--- a/shoes_dealer/views/product_attribute_views.xml
+++ b/shoes_dealer/views/product_attribute_views.xml
@@ -7,11 +7,11 @@
         <field name="type">form</field>
         <field name="inherit_id" ref="product.product_attribute_view_form"/>
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='value_ids']/tree/field[@name='is_custom']" position="after">
+            <xpath expr="//field[@name='value_ids']/list/field[@name='is_custom']" position="after">
                 <field name="set_template_id" invisible="set_hidden"/>
                 <field name="set_hidden" invisible="1"/>
             </xpath>
-            <xpath expr="//field[@name='value_ids']/tree" position="inside">
+            <xpath expr="//field[@name='value_ids']/list" position="inside">
                 <field name="material_id" optional="hide"/>
             </xpath>
         </field>
