--- a/shoes_dealer/views/product_material_views.xml
+++ b/shoes_dealer/views/product_material_views.xml
@@ -15,7 +15,7 @@
         <field name="search_view_id" eval="False"/>
         <field name="target">current</field>
         <field name="type">ir.actions.act_window</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">list,form</field>
     </record>
 
     <!-- CONFIG MENU: -->
@@ -59,21 +59,21 @@
         <field name="type">form</field>
     </record>
 
-    <!-- TREE VIEW: -->
+    <!-- list VIEW: -->
     <record id="product_material_default_tree" model="ir.ui.view">
         <field name="name">product.material.default.tree</field>
         <field name="model">product.material</field>
         <field name="arch" type="xml">
-            <tree>
+            <list>
                 <field name="name"/>
-            </tree>
+            </list>
         </field>
         <field name="groups_id" eval="[(6, 0, [])]"/>
         <field name="inherit_id" eval="False"/>
         <field name="key" eval="False"/>
         <field name="mode">primary</field>
         <field name="priority">16</field>
-        <field name="type">tree</field>
+        <field name="type">list</field>
     </record>
 
 </odoo>
