--- a/shoes_dealer/views/product_template_views.xml
+++ b/shoes_dealer/views/product_template_views.xml
@@ -46,11 +46,11 @@
         </field>
     </record>
 
-    <!-- VISTAS TREE COMUNES: -->
+    <!-- VISTAS list COMUNES: -->
     <record id="product_shoes_dealer_inh_tree" model="ir.ui.view">
         <field name="name">product.shoes.dealer.inh.tree</field>
         <field name="model">product.template</field>
-        <field name="type">tree</field>
+        <field name="type">list</field>
         <field name="inherit_id" ref="product.product_template_tree_view"/>
         <field name="priority">90</field>
         <field name="arch" type="xml">
