--- a/shoes_dealer/views/purchase_order_views.xml
+++ b/shoes_dealer/views/purchase_order_views.xml
@@ -11,7 +11,7 @@
         <field name="model">purchase.order</field>
         <field name="active" eval="True"/>
         <field name="priority">99</field>
-        <field name="type">tree</field>
+        <field name="type">list</field>
     </record>
 
     <record id="purchase_order_dealer_inh_form" model="ir.ui.view">
@@ -26,7 +26,7 @@
             <field name="partner_id" position="after">
                 <field name="pairs_count"/>
             </field>
-            <xpath expr="//page/field[@name='order_line']/tree/field[@name='price_unit']" position="after">
+            <xpath expr="//page/field[@name='order_line']/list/field[@name='price_unit']" position="after">
                 <field name="pairs_count" optional="hide"/>
                 <field name="pair_price" optional="show"/>
                 <field name="assortment_pair_id" optional="hide"/>
