--- a/shoes_dealer/views/sale_order_views.xml
+++ b/shoes_dealer/views/sale_order_views.xml
@@ -11,7 +11,7 @@
         <field name="model">sale.order</field>
         <field name="active" eval="True"/>
         <field name="priority">99</field>
-        <field name="type">tree</field>
+        <field name="type">list</field>
     </record>
 
     <record id="shoes_dealer_sale_order_inh_form" model="ir.ui.view">
@@ -38,10 +38,10 @@
                 <field name="pairs_count"/>
                 <field name="top_sales" invisible="1"/>
             </field>
-            <xpath expr="//page/field[@name='order_line']/tree/field[@name='product_template_id']" position="attributes">
+            <xpath expr="//page/field[@name='order_line']/list/field[@name='product_template_id']" position="attributes">
                 <attribute name="domain">[('sale_ok','=',True),('shoes_campaign_id','=',shoes_campaign_id)]</attribute>
             </xpath>
-            <xpath expr="//page/field[@name='order_line']/tree/field[@name='product_id']" position="before">
+            <xpath expr="//page/field[@name='order_line']/list/field[@name='product_id']" position="before">
                 <field name="product_saleko_id" force_save="1" widget="sol_product_many2one" optional="hide"
                        readonly="not product_updatable"
                        context="{'partner_id': parent.partner_id, 'quantity': product_uom_qty,
@@ -52,7 +52,7 @@
                        ('company_id', '=', parent.company_id)]"
                 />
             </xpath>
-            <xpath expr="//page/field[@name='order_line']/tree/field[@name='price_unit']" position="after">
+            <xpath expr="//page/field[@name='order_line']/list/field[@name='price_unit']" position="after">
                 <field name="pairs_count" optional="show"/>
                 <field name="special_pair_price" optional="show"/>
                 <field name="pair_price"/>
