--- a/shoes_dealer/views/set_template_views.xml
+++ b/shoes_dealer/views/set_template_views.xml
@@ -15,7 +15,7 @@
         <field name="search_view_id" eval="False"/>
         <field name="target">current</field>
         <field name="type">ir.actions.act_window</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">list,form</field>
     </record>
 
     <!-- SALE CONFIG MENU: -->
@@ -53,13 +53,13 @@
                         <field name="code" placeholder="PACK1..." help="This code will be used in the reference of new products."/>
                         <field name="attribute_id" invisible="1"/>
                         <field name="line_ids">
-                            <tree editable="bottom">
+                            <list editable="bottom">
                                 <field name="value_id" domain="[('attribute_id','=',attribute_id)]"
                                        options="{'no_quick_create': True, 'no_create_edit':True}"/>
                                 <field name="quantity"/>
                                 <field name="set_id" invisible="1"/>
                                 <field name="attribute_id" invisible="1"/>
-                            </tree>
+                            </list>
                         </field>
                         <field name="pairs_count"/>
                         <field name="value_ids" widget="many2many_tags"/>
@@ -75,25 +75,25 @@
         <field name="type">form</field>
     </record>
 
-    <!-- TREE VIEW: -->
+    <!-- list VIEW: -->
     <record id="product_set_template_default_tree" model="ir.ui.view">
-        <field name="name">product.set.template.default.tree</field>
+        <field name="name">product.set.template.default.list</field>
         <field name="model">set.template</field>
         <field name="arch" type="xml">
-            <tree>
+            <list>
                 <field name="name"/>
                 <field name="code"/>
                 <field name="line_ids" widget="many2many_tags"/>
                 <field name="pairs_count"/>
                 <field name="attribute_id" invisible="1"/>
-            </tree>
+            </list>
         </field>
         <field name="groups_id" eval="[(6, 0, [])]"/>
         <field name="inherit_id" eval="False"/>
         <field name="key" eval="False"/>
         <field name="mode">primary</field>
         <field name="priority">16</field>
-        <field name="type">tree</field>
+        <field name="type">list</field>
     </record>
 
 </odoo>
