--- a/shoes_dealer/views/stock_orderpoint_views.xml
+++ b/shoes_dealer/views/stock_orderpoint_views.xml
@@ -33,7 +33,7 @@
         <field name="model">stock.warehouse.orderpoint</field>
         <field name="active" eval="True"/>
         <field name="priority">99</field>
-        <field name="type">tree</field>
+        <field name="type">list</field>
     </record>
 
     <record id="pnt_product_product_stock_tree_inh" model="ir.ui.view">
@@ -55,7 +55,7 @@
         <field name="model">product.product</field>
         <field name="active" eval="True"/>
         <field name="priority">99</field>
-        <field name="type">tree</field>
+        <field name="type">list</field>
     </record>
 
 </odoo>
