--- a/sale_order_line_menu/views/sale_order_line_views.xml
+++ b/sale_order_line_menu/views/sale_order_line_views.xml
@@ -15,7 +15,7 @@
                 <field name="invoice_status" optional="hide" />
             </xpath>
             <xpath expr="//field[@name='name']" position="after">
-                <field name="analytic_account_id" optional="hide" />
+                <field name="project_id" optional="hide" />
             </xpath>
             <xpath expr="//field[@name='order_partner_id']" position="after">
                 <field name="product_id" />
@@ -148,8 +148,8 @@
                 />
                 <filter
                     name="groupby_account_analytic"
-                    string="Analytic Account"
-                    context="{'group_by' : 'analytic_account_id'}"
+                    string="Project"
+                    context="{'group_by' : 'project_id'}"
                 />
                 <filter
                     name="groupby_date_order"
