--- a/shoes_dealer/views/product_product_views.xml
+++ b/shoes_dealer/views/product_product_views.xml
@@ -10,8 +10,8 @@
         <field name="arch" type="xml">
             <field name="product_tag_ids" position="after">
                 <field name="pairs_count" optional="show"/>
-                <field name="color_attribute_id" optional="hide"/>
-                <field name="size_attribute_id" optional="hide"/>
+                <field name="color_value_id" optional="hide"/>
+                <field name="size_value_id" optional="hide"/>
                 <field name="assortment_attribute_id" optional="hide"/>
             </field>
         </field>
@@ -51,8 +51,8 @@
             <data>
                 <field name="name" position="after">
                     <separator/>
-                    <filter string="Color" name="color_value" context="{'group_by':'color_attribute_id'}"/>
-                    <filter string="Size" name="size_value" context="{'group_by':'size_attribute_id'}"/>
+                    <filter string="Color" name="color_value" context="{'group_by':'color_value_id'}"/>
+                    <filter string="Size" name="size_value" context="{'group_by':'size_value_id'}"/>
                     <filter string="Assortment" name="assortment_value" context="{'group_by':'assortment_attribute_id'}"/>
                     <separator/>
                 </field>
