--- a/shoes_dealer/views/sale_order_line_views.xml
+++ b/shoes_dealer/views/sale_order_line_views.xml
@@ -24,7 +24,7 @@
                 <field name="shoes_campaign_id" optional="show"/>
                 <field name="product_brand_id" optional="hide"/>
                 <field name="product_tmpl_id" optional="hide"/>
-                <field name="color_attribute_id" optional="hide"/>
+                <field name="color_value_id" optional="hide"/>
                 <field name="manufacturer_id" optional="hide"/>
                 <field name="country_id" optional="hide"/>
                 <field name="state_id" optional="hide"/>
@@ -51,7 +51,7 @@
             <field name="salesman_id" position="after">
                 <field name="shoes_campaign_id" string="Campaign"/>
                 <field name="product_tmpl_id" string="Shoes Model"/>
-                <field name="color_attribute_id" string="Color"/>
+                <field name="color_value_id" string="Color"/>
                 <field name="product_brand_id" string="Brand"/>
                 <field name="country_id" string="Customer country"/>
                 <field name="state_id" string="Customer State"/>
@@ -59,7 +59,7 @@
             <xpath expr="//group" position="inside">
                 <filter name="groupby_campaign" string="Campaign" context="{'group_by' : 'shoes_campaign_id'}"/>
                 <filter name="groupby_model" string="Shoes Model" context="{'group_by' : 'product_tmpl_id'}"/>
-                <filter name="groupby_color" string="Color" context="{'group_by' : 'color_attribute_id'}"/>
+                <filter name="groupby_color" string="Color" context="{'group_by' : 'color_value_id'}"/>
                 <filter name="groupby_brand" string="Brand" context="{'group_by' : 'product_brand_id'}"/>
                 <filter name="groupby_customer" string="Customer" context="{'group_by' : 'order_partner_id'}"/>
                 <filter name="groupby_country" string="Customer Country" context="{'group_by' : 'country_id'}"/>
