--- a/project_task_default_stage/views/project_view.xml
+++ b/project_task_default_stage/views/project_view.xml
@@ -35,7 +35,7 @@
                             <field name="mail_template_id" optional="show" />
                             <field name="rating_template_id" optional="show" />
                             <field name="auto_validation_state" optional="hide" />
-                            <field name="description" optional="hide" />
+                            <field name="name" optional="hide" />
                         </list>
                     </field>
                 </page>
