--- a/shoes_dealer/views/product_template_views.xml
+++ b/shoes_dealer/views/product_template_views.xml
@@ -13,18 +13,29 @@
             <xpath expr="//page[@name='general_information']" position="before">
                 <page name="shoes_dealer" string="Shoes dealer">
                     <group>
-                        <group>
+                        <group name="campaign" string="Campaign">
                             <field name="shoes_campaign_id" readonly="is_pair or product_tmpl_set_id"/>
                             <field name="gender" readonly="is_pair or product_tmpl_set_id"/>
-                            <field name="manufacturer_id" readonly="is_pair or product_tmpl_set_id"/>
-                            <field name="material_id" readonly="is_pair or product_tmpl_set_id"/>
-                            <!-- Campos comunes en pares y surtidos que han de ser replicados: -->
-                            <field name="shoes_pair_weight_id" readonly="is_pair or product_tmpl_set_id"/>
                             <field name="campaign_code" readonly="1"/>
                         </group>
-                        <group>
+
+                        <group name="relations" string="Relations">
                             <field name="product_tmpl_single_id" invisible="not is_assortment" domain="[('is_pair', '=', True)]" readonly="product_tmpl_set_id"/>
                             <field name="product_tmpl_set_id" invisible="not is_pair" domain="[('is_assortment', '=', True)]" readonly="product_tmpl_set_id"/>
+                            <!-- Campos requeridos, invisibles: -->
+                            <field name="exwork_currency_id" invisible="1"/>
+                            <field name="is_pair" invisible="1"/>
+                            <field name="is_assortment" invisible="1"/>
+                            <field name="pairs_sold"/>
+                        </group>
+
+                        <group name="manufacturing" string="Manufacturing">
+                            <field name="manufacturer_id" readonly="is_pair or product_tmpl_set_id"/>
+                            <field name="material_id" readonly="is_pair or product_tmpl_set_id"/>
+                            <field name="shoes_shape_id"/>
+                            <field name="shoes_pair_weight_id" readonly="is_pair or product_tmpl_set_id"/>
+                        </group>
+                        <group name="pricing" string="Pricing">
                             <field name="product_tmpl_single_list_price" invisible="not product_tmpl_single_id"/>
                             <field name="exwork" invisible="product_tmpl_single_id" options="{'currency_field':'exwork_currency_id'}" readonly="product_tmpl_set_id"/>
                             <field name="exwork_single" invisible="not product_tmpl_single_id" options="{'currency_field':'exwork_currency_id'}" readonly="product_tmpl_set_id"/>
@@ -32,13 +43,8 @@
                             <field name="exwork_single_euro" invisible="not product_tmpl_single_id" options="{'currency_field':'currency_id'}"/>
                             <field name="shipping_price" invisible="product_tmpl_single_id" readonly="product_tmpl_set_id"/>
                             <field name="shipping_single_price" invisible="not product_tmpl_single_id" readonly="product_tmpl_set_id"/>
-                            <!-- Campos requeridos, invisibles: -->
-                            <field name="exwork_currency_id" invisible="1"/>
-                            <field name="is_pair" invisible="1"/>
-                            <field name="is_assortment" invisible="1"/>
-                            <field name="pairs_sold"/>
-                            <field name="shoes_shape_id"/>
                         </group>
+
                     </group>
                 </page>
             </xpath>
