--- a/shoes_dealer/views/shoes_assortment_views.xml
+++ b/shoes_dealer/views/shoes_assortment_views.xml
@@ -22,7 +22,7 @@
     <record id="product_shoes_assortment_menu" model="ir.ui.menu">
         <field name="action" ref="action_product_shoes_assortment"/>
         <field name="active" eval="True"/>
-        <field name="name">Assortments</field>
+        <field name="name">Assortments templates</field>
         <field name="parent_id" ref="sale.menu_sale_config"/>
         <field name="sequence">100</field>
         <field name="web_icon" eval="False"/>
@@ -32,7 +32,7 @@
     <record id="inventory_shoes_assortment_menu" model="ir.ui.menu">
         <field name="action" ref="action_product_shoes_assortment"/>
         <field name="active" eval="True"/>
-        <field name="name">Assortments</field>
+        <field name="name">Assortments templates</field>
         <field name="parent_id" ref="shoes_dealer.inventory_shoes_dealer_menu"/>
         <field name="sequence">90</field>
         <field name="web_icon" eval="False"/>
